--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Happy Valentine’s Day, Babe❤️</h1> 
-    <audio loop>
+    <audio autoplay loop>
     <source src="Danya-Devs-Asambe-(Afrohousekings.co.za).mp3" type="audio/mpeg">
     </audio>
        
@@ -42,15 +42,8 @@
         <p><strong>Yours Promise</strong></p>
          </div>
   <script>
-function startFireworks() {
-    document.getElementById("response").innerHTML =
-        "Yay!! I’m the luckiest person ever ❤️";
-
-    // start music after click
-    const music = document.getElementById("bgMusic");
-    music.play();
-
-    setInterval(createFirework, 600);
+function sayYes() {
+    document.getElementById("response").innerHTML = "Yay!! I’m the luckiest person ever ❤️";
 }
 </script>
 
